--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -51,7 +51,7 @@
                 >Login / </a
               >
               <span><a href="{% url 'register-user' %}" class="cs-color cs-popup-joinus-btn login-popup ml-0">Register</a></span>
-              <a class="get-start-btn" href="#">
+              <a class="get-start-btn" href="{% url 'register-vendor' %}">
                 Register Restaurant
               </a>
             </div>
