--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -43,18 +43,26 @@
           </div>
           <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
             <div class="login-option">
-              <a
-                class="cs-color cs-popup-joinus-btn login-popup"
-                data-target="#sign-in"
-                data-toggle="modal"
-                href="{% url 'register-user' %}"
-                >Login / </a
-              >
-              <span><a href="{% url 'register-user' %}" class="cs-color cs-popup-joinus-btn login-popup ml-0">Register</a></span>
-              <a class="get-start-btn" href="{% url 'register-vendor' %}">
-                Register Restaurant
-              </a>
-            </div>
+            {% if user.is_authenticated %}
+                
+                {% if user.is_vendor %}
+                  <a href="{% url 'dashboard' %}" class="cs-color cs-popup-joinus-btn login-popup">Tableau de bord</a>
+                {% else %}
+                  <a href="{% url 'my-account' %}" class="cs-color cs-popup-joinus-btn login-popup">Mon compte</a>
+                {% endif %}
+                                  
+                <a href="{% url 'logout' %}" class="cs-color cs-popup-joinus-btn login-popup text-danger">Se déconnecter</a>
+            {% else %}
+                <a class="cs-color cs-popup-joinus-btn login-popup" href="{% url 'login' %}">Login / </a>
+                <span><a href="{% url 'register-user' %}" class="cs-color cs-popup-joinus-btn login-popup ml-0">Register</a></span>
+                <a class="get-start-btn" href="{% url 'register-vendor' %}">
+                  Register Restaurant
+                </a>
+            {% endif %}
+          
+          </div>
+              
+                       
           </div>
         </div>
       </div>
