Activation utilisateur et mot de passe oublié

--- a/templates/accounts/emails/reset_password.html
+++ b/templates/accounts/emails/reset_password.html
@@ -17,15 +17,15 @@
                     <div class="user-dashboard loader-holder w-50" style="min-height: auto;">
                         <div class="user-holder">
                             <h4 class="text-center" style="margin-bottom: 0">
-                                SE CONNECTER A FOODONLINE
+                                CHANGER DE MOT DE PASSE
                             </h4>
                             <p class="text-center">
-                                Connectez-vous ici pour effectuer des actions.
+                                Votre nouveau mot de passe ici.
                             </p>
                             <hr />
                             <div id="restaurant-sets-holder">
                                 <form class="form-fields-set foodbakery-dev-restaurant-form" method="post"
-                                    action="{% url 'login' %}">
+                                    action="{% url 'reset-password' %}">
                                     {% csrf_token %}
                                     <ul
                                         class="register-add-restaurant-tab-container restaurant-information-tab-container">
@@ -35,12 +35,12 @@
                                                     <div class="row">
                                                         <div class="col-12">
                                                             <div class="field-holder">
-                                                                <input type="email" name="email" placeholder="Votre adresse mail">
+                                                                <input type="password" name="password" placeholder="Nouveau mot de passe">
                                                             </div>
                                                         </div>
                                                         <div class="col-12">
                                                             <div class="field-holder">
-                                                                <input type="password" name="password" placeholder="Mot de passe">
+                                                                <input type="password" name="confirm_password" placeholder="Confirmer nouveau mot de passe">
                                                             </div>
                                                         </div>
                                                     </div>
@@ -56,14 +56,10 @@
                                                         <div class="payment-holder d-flex align-items-center justify-content-between">
                                                             <input type="submit" value="Submit"
                                                                 id="btn-next-restaurant-information" class="bgcolor" />
-                                                            <a href="{% url 'forgot-password' %}" class="">Mot de passe oublié ?</a>
                                                         </div>
                                                     </div>
                                                 </div>
                                             </div>
-                                            <span>Vous n'avez pas de compte ? <a href="{% url 'register-user' %}">S'inscrire</a></span>
-
-
                                             {% include 'includes/alerts.html' %}
 
 
