--- a/templates/accounts/emails/forgot_password.html
+++ b/templates/accounts/emails/forgot_password.html
@@ -17,15 +17,15 @@
                     <div class="user-dashboard loader-holder w-50" style="min-height: auto;">
                         <div class="user-holder">
                             <h4 class="text-center" style="margin-bottom: 0">
-                                SE CONNECTER A FOODONLINE
+                                VOUS AVEZ OUBLIE VOTRE MOT DE PASSE ?
                             </h4>
                             <p class="text-center">
-                                Connectez-vous ici pour effectuer des actions.
+                                Entrez votre adresse mail ici pour recevoir le lien vous permettant de réinitialiser votre mot de passe
                             </p>
                             <hr />
                             <div id="restaurant-sets-holder">
                                 <form class="form-fields-set foodbakery-dev-restaurant-form" method="post"
-                                    action="{% url 'login' %}">
+                                    action="{% url 'forgot-password' %}">
                                     {% csrf_token %}
                                     <ul
                                         class="register-add-restaurant-tab-container restaurant-information-tab-container">
@@ -38,11 +38,6 @@
                                                                 <input type="email" name="email" placeholder="Votre adresse mail">
                                                             </div>
                                                         </div>
-                                                        <div class="col-12">
-                                                            <div class="field-holder">
-                                                                <input type="password" name="password" placeholder="Mot de passe">
-                                                            </div>
-                                                        </div>
                                                     </div>
                                                 </div>
                                             </div>
@@ -53,20 +48,14 @@
                                             <div class="row">
                                                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                                                     <div class="field-holder">
-                                                        <div class="payment-holder d-flex align-items-center justify-content-between">
+                                                        <div class="payment-holder">
                                                             <input type="submit" value="Submit"
                                                                 id="btn-next-restaurant-information" class="bgcolor" />
-                                                            <a href="{% url 'forgot-password' %}" class="">Mot de passe oublié ?</a>
                                                         </div>
                                                     </div>
                                                 </div>
                                             </div>
-                                            <span>Vous n'avez pas de compte ? <a href="{% url 'register-user' %}">S'inscrire</a></span>
-
-
                                             {% include 'includes/alerts.html' %}
-
-
                                         </li>
                                     </ul>
                                 </form>
